# personal-budget-planner

./: .claudeignore  .env.example  .gitignore  .mcp.json  .planning_tmp  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Caddyfile.cloudflare  Caddyfile.dev  Dockerfile  Dockerfile.frontend  LICENSE  LICENSE-CLOSED-COMPONENTS.md  Makefile  OPEN-CORE-MANIFEST.md  README.md  alembic.ini  cloudflared-config.yml  deploy.sh  deploy_inner.sh  docker-compose.cloudflare.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  lefthook.yml  main_api.py  main_bot.py  main_worker.py  package-lock.json  package.json  pyproject.toml
.planning/: CONVERGENCE-AND-DEBT-PLAN.md  HANDOFF-liquid-glass-v2-ui.md  LEGACY-V10-DEBT-REGISTRY.md  MILESTONES.md  PRODUCT-STRATEGY.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  WEB-UX-REFACTOR-PLAN.md  config.json  v0.3-MILESTONE-AUDIT.md  v0.3-UAT-RESULTS.md  v0.4-MILESTONE-AUDIT.md  v0.4-TEST-REPORT.md  v1.0.1-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.1.1-MILESTONE-AUDIT.md  v1.1.2-MULTILEAD-REVIEW.md
alembic/: env.py
app/: dev_seed.py  main_api.py
contract/: README.md  check_contract_sync.sh  check_dto_mirrors.py  dump_openapi.py  gen_swift_dto.py  openapi.json
deploy/: Caddyfile  Caddyfile.cloudflare  Dockerfile  Dockerfile.frontend  README.md  deploy.sh  docker-compose.cloudflare.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh
design/: tokens.json
docs/: BRD.md  COMPLIANCE.md  DEPLOY.md  HLD.md  LICENSE-CLOSED-COMPONENTS.md  LOAD-TEST.md  (+5 more)
(+1959 files in other folders)
